# smashdog_match

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
database/: database
event_share/: .gitignore  README.md  create.php  index.html  mail.php  package-lock.json  package.json  vite.config.js
event_share/api/: BlockPuzzleController.php  captcha.php  config.php  function.php  index.php  keyManager.php  sign.php  user.php  words.php
event_share/src/: App.vue  main.js  router.js
event_share/src/assets/: form.less  home.less
event_share/src/components/verifition/: Verify.vue
event_share/src/components/verifition/Verify/: VerifySlide.vue
event_share/src/components/verifition/api/: index.js
event_share/src/components/verifition/utils/: axios.js
event_share/src/pages/: ChangePwd.vue  FindPwd.vue  GameList.vue  Home.vue  KeyManager.vue  Login.vue  Matchs.vue  Register.vue  RegisterSuccess.vue  Sign.vue  VerifyEmail.vue
event_share/src/tools/: net.js
src/: App.vue  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/database/: database
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/country/: flags.css
src/components/: edit.vue  page.vue
src/components/tooltip/: directive.js  tooltip.vue
src/pages/: Games.vue  Matchs.vue  MatchsFriend.vue  Players.vue
src/update/: sql.json
src/utils/: token.js
