[package]
name = "match"
version = "0.7.2"
description = "心情过客的比赛管理器"
authors = ["心情过客"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
project-root = "0.2.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"

# [profile.release.package.wry]
# debug = true
# debug-assertions = true
